[package]
name = "xgboostrs"
version = "0.2.0"
edition = "2015"

authors = ["keithyin <yinpenghhz@hotmail.com>"]
license = "MIT"
repository = "https://github.com/davechallis/rust-xgboost"
homepage = "https://github.com/davechallis/rust-xgboost"
description = "Machine learning using XGBoost"
documentation = "https://docs.rs/xgboost"
readme = "README.md"

[dependencies]
xgboostrs-sys = "0.2.0"
libc = "0.2"
derive_builder = "0.5"
log = "0.4"
tempfile = "3.0"
indexmap = "1.0"
